--- a/package.json
+++ b/package.json
@@ -41,11 +41,13 @@
     "postcss-preset-env": "6.0.6",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.6.2",
+    "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-jss": "^8.6.1",
+    "react-sizes": "^1.0.4",
     "react-styleguidist": "^8.0.6",
     "recompose": "^0.30.0",
     "resolve": "1.8.1",
