--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "ramda": "^0.26.1",
     "react": "^16.6.3",
     "react-app-polyfill": "^0.1.3",
+    "react-container-dimensions": "^1.4.1",
     "react-dev-utils": "^6.1.1",
     "react-dom": "^16.6.3",
     "react-jss": "^8.6.1",
+    "react-sizeme": "^2.5.2",
     "react-sizes": "^1.0.4",
     "react-styleguidist": "^8.0.6",
     "recompose": "^0.30.0",
